# tryvantahome

./: .replit  pyproject.toml  replit.md  vite.config.ts
.agents/memory/: MEMORY.md  dev-preview-setup.md  tryvanta-architecture.md
backend/: main.py  requirements.txt
public/: manifest.webmanifest  robots.txt  sw.js
src/: routeTree.gen.ts  router.tsx  styles.css
src/components/: AppShell.tsx  DevPreviewBanner.tsx  DeviceCard.tsx  DeviceIcon.tsx  PwaInstallPrompt.tsx  RelayCard.tsx
src/context/: AuthContext.tsx
src/lib/: api.ts  esp32.ts  realtime.ts  types.ts
src/lib/dev-preview/: index.ts  interceptor.ts  mock-data.ts
src/routes/: __root.tsx  _app.automations.tsx  _app.cameras.tsx  _app.dashboard.tsx  _app.devices.$deviceId.tsx  _app.energy.tsx  _app.genesis.tsx  _app.rooms.$roomId.tsx  _app.rooms.tsx  _app.scenes.tsx  _app.settings.tsx  _app.tsx  index.tsx  login.tsx  sitemap[.]xml.ts
